// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiButtonGroup button props buttonSize compressed is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--compressed ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props buttonSize compressed is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--compressed ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props buttonSize m is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--medium ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props buttonSize m is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--medium ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props buttonSize s is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props buttonSize s is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color accent is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--accent"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color accent is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--accent"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--accent ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color danger is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--danger"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color danger is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--danger"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--danger ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color ghost is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--ghost"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color ghost is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--ghost"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--ghost ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color primary is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--primary"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color primary is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--primary"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--primary ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color secondary is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--secondary"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color secondary is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--secondary"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--secondary ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color success is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--success"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color success is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--success"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--success ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color text is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color text is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color warning is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--warning"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props color warning is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--warning"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--warning ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isDisabled is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text ouiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled testClass1 testClass2"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isDisabled is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text ouiButtonGroup--isDisabled"
  disabled=""
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled testClass1 testClass2"
      data-test-subj="test subject string"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button01"
      disabled=""
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isFullWidth is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text ouiButtonGroup--fullWidth"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isFullWidth is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text ouiButtonGroup--fullWidth"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isIconOnly is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isIconOnly testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isIconOnly"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled ouiButtonGroupButton-isIconOnly"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props isIconOnly is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isIconOnly testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isIconOnly"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled ouiButtonGroupButton-isIconOnly"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiScreenReaderOnly"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props selection idSelected is rendered for single 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton--fill ouiButtonGroupButton-isSelected testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            checked=""
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup button props selection idToSelectedMap is rendered for multi 1`] = `
<fieldset
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="true"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton--fill ouiButtonGroupButton-isSelected testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton--fill ouiButtonGroupButton-isSelected"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup type multi is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <button
      aria-label="aria-label"
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      data-test-subj="button01"
      id="generated-id"
      type="button"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`OuiButtonGroup type single is rendered 1`] = `
<fieldset
  aria-label="aria-label"
  class="ouiButtonGroup ouiButtonGroup--small ouiButtonGroup--text testClass1 testClass2"
  data-test-subj="test subject string"
>
  <legend
    class="ouiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="ouiButtonGroup__buttons"
  >
    <label
      aria-label="aria-label"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small testClass1 testClass2"
      data-test-subj="test subject string"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button00"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small"
      for="generated-id"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          <input
            class="ouiScreenReaderOnly"
            data-test-subj="button01"
            id="generated-id"
            name="test"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <button
      aria-pressed="false"
      class="ouiButtonGroupButton ouiButtonGroupButton--text ouiButtonGroupButton--small ouiButtonGroupButton-isDisabled"
      data-test-subj="button02"
      disabled=""
      id="generated-id"
      type="submit"
    >
      <span
        class="ouiButtonContent ouiButton__content"
      >
        <span
          class="ouiButtonContent__icon"
          color="inherit"
          data-ouiicon-type="bolt"
        />
        <span
          class="ouiButton__text ouiButtonGroupButton__textShift"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
